<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/espiral">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/botonsegundo"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/texto1"
                android:textColor="#0F0E0F"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceso"
                android:gravity="center"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/nombre_asig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nombre"

                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/dni_asig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="DNI sin letra"

                android:inputType="numberPassword" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/fichar_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#A6B9A6"
                android:text="@string/fichar" />

            <Button
                android:id="@+id/salir_ap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#BBA19F"
                android:text="SALIR" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_agrega_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#94C4DA"
                android:text="@string/agrega_administrador" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mensajeInform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:textColor="#CA524A"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <ImageView
                android:id="@+id/creaAdmin"
                android:layout_width="91dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/apoyo"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="488dp" />

            <ImageView
                android:id="@+id/ayuda"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                app:srcCompat="@drawable/salvavidas" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
